--- a/deploy/crds/core.matrixorigin.io_cnsets.yaml
+++ b/deploy/crds/core.matrixorigin.io_cnsets.yaml
@@ -59,12 +59,6 @@ spec:
             type: object
           spec:
             properties:
-              apAvailable:
-                anyOf:
-                - type: integer
-                - type: string
-                description: TPAvailable maximum ap set is available kubebuilder:default=0
-                x-kubernetes-int-or-string: true
               cacheVolume:
                 description: CacheVolume is the desired local cache volume for CNSet,
                   node storage will be used if not specified
@@ -108,6 +102,15 @@ spec:
               image:
                 description: Image is the docker image of the main container
                 type: string
+              initialConfig:
+                properties:
+                  apAvailable:
+                    anyOf:
+                    - type: integer
+                    - type: string
+                    description: TPAvailable maximum ap set is available kubebuilder:default=0
+                    x-kubernetes-int-or-string: true
+                type: object
               lifecycle:
                 description: Lifecycle defines the lifecycle hooks for Pods pre-delete,
                   in-place update.
