--- a/deploy/crds/core.matrixorigin.io_matrixoneclusters.yaml
+++ b/deploy/crds/core.matrixorigin.io_matrixoneclusters.yaml
@@ -24,11 +24,8 @@ spec:
     - jsonPath: .spec.dn.replicas
       name: DN
       type: integer
-    - jsonPath: .spec.tp.replicas
-      name: TP
-      type: integer
-    - jsonPath: .spec.ap.replicas
-      name: AP
+    - jsonPath: .spec.cn.replicas
+      name: CN
       type: integer
     - jsonPath: .spec.version
       name: Version
@@ -63,12 +60,6 @@ spec:
                 description: TP is the default CN pod set that accepts client connections
                   and execute queries
                 properties:
-                  apAvailable:
-                    anyOf:
-                    - type: integer
-                    - type: string
-                    description: TPAvailable maximum ap set is available kubebuilder:default=0
-                    x-kubernetes-int-or-string: true
                   cacheVolume:
                     description: CacheVolume is the desired local cache volume for
                       CNSet, node storage will be used if not specified
@@ -112,6 +103,15 @@ spec:
                   image:
                     description: Image is the docker image of the main container
                     type: string
+                  initialConfig:
+                    properties:
+                      apAvailable:
+                        anyOf:
+                        - type: integer
+                        - type: string
+                        description: TPAvailable maximum ap set is available kubebuilder:default=0
+                        x-kubernetes-int-or-string: true
+                    type: object
                   lifecycle:
                     description: Lifecycle defines the lifecycle hooks for Pods pre-delete,
                       in-place update.
