--- a/examples/mo-cluster.yaml
+++ b/examples/mo-cluster.yaml
@@ -20,13 +20,19 @@ spec:
         path: aylei-test/mo-logset
     volume:
       size: 10Gi
+    nodeSelector:
+      kubernetes.io/arch: amd64
   dn:
     replicas: 2
     initialConfig:
       storageBackend: "MEM"
     cacheVolume:
       size: 10Gi
+    nodeSelector:
+      kubernetes.io/arch: amd64
   tp:
     replicas: 2
     cacheVolume:
       size: 10Gi
+    nodeSelector:
+      kubernetes.io/arch: amd64
